# symjoy

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
src/symjoy/: __init__.py
src/symjoy/api/: __init__.py  arrows.py  currency.py  emoji.py  math.py  misc.py  symbols.py
src/symjoy/categories/: arrows.py  currency.py  emoji.py  math.py  misc.py  symbols.py
src/symjoy/core/: registry.py  search.py
